Convert new Integer calls to Integer.valueOf().
According to FindBugs, Using new Integer(int) is guaranteed to
always result in a new object whereas Integer.valueOf(int) allows
caching of values to be done by the compiler, class library, or
JVM. Using of cached values avoids object allocation and the code
will be faster.